#################################################################################################################################################################
########### Import                                                                                                                                     [ Import ]
##### Internal                                                                                                                               [ Import, Internal ]
##### External                                                                                                                               [ Import, External ]
load("@rules_rust//rust:defs.bzl", "rust_library")

##### Visibility                                                                                                                                       [ Module ]
package(default_visibility = ["//visibility:private"])

##### Module                                                                                                                                           [ Module ]
rust_library(
    name = "generation",
    srcs = ["generation.rs"],
    visibility = ["//:__pkg__"],
    deps = [
        "//:component",
        "//system/generation:rust",
    ],
)

rust_library(
    name = "observation",
    srcs = ["observation.rs"],
    proc_macro_deps = [
        "//system/observation:macro",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//component/observation:module",
        "//system/observation/trace:module",
    ],
)

rust_library(
    name = "graph",
    srcs = ["graph.rs"],
    visibility = ["//:__pkg__"],
    deps = [
        "//system/graph:similarity",
        "//system/graph:symbolic",
    ],
)

rust_library(
    name = "highlight",
    srcs = ["highlight.rs"],
    visibility = ["//visibility:public"],
    deps = [
        "@crates//:miette",
        "@crates//:owo-colors",
        "@crates//:proc-macro2",
        "@crates//:syn",
        "@crates//:tree-sitter",
        "@crates//:tree-sitter-python",
    ],
)

rust_library(
    name = "diagnostic",
    srcs = ["diagnostic.rs"],
    visibility = ["//visibility:public"],
    deps = [
        "//component/observation:module",
        "//system:highlight",
        "@crates//:ctor",
        "@crates//:miette",
    ],
)

rust_library(
    name = "language",
    srcs = ["language.rs"],
    visibility = ["//visibility:public"],
)

rust_library(
    name = "resource",
    srcs = ["resource.rs"],
    visibility = ["//visibility:public"],
    deps = [
        "@crates//:miette",
        "@crates//:thiserror",
    ],
)

rust_library(
    name = "event",
    srcs = ["event.rs"],
    visibility = ["//visibility:public"],
)

rust_library(
    name = "web",
    srcs = ["web.rs"],
    visibility = ["//visibility:public"],
    deps = [
        "//system/web:highlight",
        "//system/web:render",
    ],
)

##### Documentation                                                                                                                             [ Documentation ]
