#################################################################################################################################################################
########### Import                                                                                                                                     [ Import ]
##### Internal                                                                                                                               [ Import, Internal ]
##### External                                                                                                                               [ Import, External ]
load("@rules_rust//rust:defs.bzl", "rust_library")

##### Visibility                                                                                                                                       [ Module ]
package(default_visibility = [
    "//:__pkg__",
    "//:__subpackages__",
])

##### Module                                                                                                                                           [ Module ]
rust_library(
    name = "report",
    srcs = ["report.rs"],
    proc_macro_deps = ["//system/observation:macro"],
    deps = [
        "//component/observation:channel",
        "//component/observation:module",
        "//platform:test",
        "//system:concurrent",
        "//system/observation:argument",
        "//test/report:error",
        "//test/report:execution",
        "@crates//:clap",
        "@crates//:derive_more",
        "@crates//:miette",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:tracing",
    ],
)

rust_library(
    name = "resource",
    srcs = ["resource.rs"],
    deps = [
        "//test/resource:system",
    ],
)

rust_library(
    name = "utility",
    srcs = ["utility.rs"],
    deps = [
        "@crates//:miette",
    ],
)

##### Documentation                                                                                                                             [ Documentation ]
