#################################################################################################################################################################
########### Import                                                                                                                                     [ Import ]
##### Internal                                                                                                                               [ Import, Internal ]
##### External                                                                                                                               [ Import, External ]
load("@rules_rust//rust:defs.bzl", "rust_library")

##### Visibility                                                                                                                                       [ Module ]
package(default_visibility = [
    "//:__pkg__",
    "//:__subpackages__",
])

##### Module                                                                                                                                           [ Module ]
rust_library(
    name = "system",
    srcs = ["system.rs"],
    deps = [
        "//test/system:function",
        "//test/system:performance",
    ],
)

rust_library(
    name = "resource",
    srcs = ["resource.rs"],
    deps = [
        "//test/resource:system",
    ],
)

rust_library(
    name = "utility",
    srcs = ["utility.rs"],
    deps = [
        "@crates//:miette",
    ],
)

##### Documentation                                                                                                                             [ Documentation ]
