#################################################################################################################################################################
########### Import                                                                                                                                     [ Import ]
##### Internal                                                                                                                               [ Import, Internal ]
##### External                                                                                                                               [ Import, External ]
load("@rules_rust//rust:defs.bzl", "rust_library")

##### Visibility                                                                                                                                       [ Module ]
package_group(
    name = "components",
    packages = [
        "//Molten/component/...",
    ],
)

##### Module                                                                                                                                           [ Module ]
rust_library(
    name = "module",
    srcs = ["component.rs"],
    crate_name = "component",
    visibility = [
        "//Molten:molten",
        "//Molten/system:systems",
        "//Molten/test:tests",
    ],
    deps = [
        "//Molten/component/graph:module",
    ],
)
