#################################################################################################################################################################
########### Import                                                                                                                                     [ Import ]
##### Internal                                                                                                                               [ Import, Internal ]
##### External                                                                                                                               [ Import, External ]
load("@rules_rust//rust:defs.bzl", "rust_library")

##### Visibility                                                                                                                                       [ Module ]
package(default_visibility = ["//visibility:public"])

##### Module                                                                                                                                           [ Module ]
rust_library(
    name = "module",
    srcs = ["component.rs"],
    crate_name = "component",
    deps = [
        "//Molten/component/graph:module",
    ],
)

##### Documentation                                                                                                                             [ Documentation ]
