#################################################################################################################################################################
########### Import                                                                                                                                     [ Import ]
##### Internal                                                                                                                               [ Import, Internal ]
##### External                                                                                                                               [ Import, External ]
load("@rules_rust//rust:defs.bzl", "rust_library")

##### Visibility                                                                                                                                       [ Module ]
package(default_visibility = ["//visibility:public"])

##### Module                                                                                                                                           [ Module ]
rust_library(
    name = "index",
    srcs = ["index.rs"],
    aliases = {"//Molten/system/spatialize/document:index": "spatialize"},
    deps = [
        "//Molten/system/spatialize/document:index",
        "//component/web:index",
    ],
)

#################################################################################################################################################################
########## Page                                                                                                                                           [ Page ]
rust_library(
    name = "molten",
    srcs = ["molten.page.rs"],
    deps = [
        "//:module.version",
        "//Molten/system/forge:command.lava",
        "//Molten/system/forge:command.lava.sink.grpc",
        "//Molten/system/forge:command.lava.sink.log",
        "//Molten/test/resource/system/graph/module/citizen/symbolic:citizen",
        "//Molten/test/resource/system/graph/module/join/symbolic:join",
        "//Molten/test/resource/system/graph/module/math/numeric/logic/boolean/symbolic:boolean",
        "//component/web:body",
        "//component/web:class",
        "//component/web:extraction",
        "//component/web:page",
        "//document:index",
        "//system/generation/web:navigation",
    ],
)

rust_library(
    name = "info",
    srcs = ["info.page.rs"],
    deps = [
        "//component/web:body",
        "//component/web:page",
        "//document:index",
        "//system/generation/web:navigation",
    ],
)

rust_library(
    name = "notice",
    srcs = ["notice.page.rs"],
    deps = [
        "//component/web:page",
        "//document:content",
        "//document:index",
    ],
)

rust_library(
    name = "license",
    srcs = ["license.page.rs"],
    deps = [
        "//component/web:page",
        "//document:content",
        "//document:index",
    ],
)
