#################################################################################################################################################################
########### Import                                                                                                                                     [ Import ]
##### Internal                                                                                                                               [ Import, Internal ]
##### External                                                                                                                               [ Import, External ]

##### Visibility                                                                                                                                       [ Module ]
package(default_visibility = [
    "//Molten:__pkg__",
    "//Molten:__subpackages__",
])

##### Module                                                                                                                                           [ Module ]
exports_files([
    "logo.png",
])

##### Documentation                                                                                                                             [ Documentation ]
