#################################################################################################################################################################
########### Import                                                                                                                                     [ Import ]
##### Internal                                                                                                                               [ Import, Internal ]
##### External                                                                                                                               [ Import, External ]
load("//component/web/starlark:defs.bzl", "copy")

##### Visibility                                                                                                                                       [ Module ]
package(default_visibility = [
    "//Molten:__pkg__",
    "//Molten:__subpackages__",
])

##### Module                                                                                                                                           [ Module ]
filegroup(
    name = "logo",
    srcs = ["logo.png"],
)

copy(
    name = "logo.copy",
    src = ":logo",
    path = "Molten/resource/logo.png",
    visibility = ["//visibility:public"],
)

##### Documentation                                                                                                                             [ Documentation ]
