#################################################################################################################################################################
########### Import                                                                                                                                     [ Import ]
##### Internal                                                                                                                               [ Import, Internal ]
##### External                                                                                                                               [ Import, External ]
load("//component/web/starlark:defs.bzl", "copy")

##### Visibility                                                                                                                                       [ Module ]
package(default_visibility = [
    "//Molten:__pkg__",
    "//Molten:__subpackages__",
])

##### Module                                                                                                                                           [ Module ]
filegroup(
    name = "logos",
    srcs = [
        "favicon.ico",
        "logo.png",
    ],
)

copy(
    name = "favicon.copy",
    src = "favicon.ico",
    path = "Molten/resource/favicon.ico",
    visibility = ["//visibility:public"],
)

copy(
    name = "logo.copy",
    src = "logo.png",
    path = "Molten/resource/logo.png",
    visibility = ["//visibility:public"],
)

##### Documentation                                                                                                                             [ Documentation ]
