#################################################################################################################################################################
########### Import                                                                                                                                     [ Import ]
##### Internal                                                                                                                               [ Import, Internal ]
##### External                                                                                                                               [ Import, External ]
load("@rules_rust//rust:defs.bzl", "rust_library")

##### Visibility                                                                                                                                       [ Module ]
package(default_visibility = ["//visibility:public"])

##### Module                                                                                                                                           [ Module ]
rust_library(
    name = "module",
    srcs = ["system.rs"],
    crate_name = "system",
    deps = [
        "//Molten/component:module",
        "//Molten/system/evaluate:module",
        "//Molten/system/graph:module",
        "//Molten/system/optimize:module",
        "//Molten/system/spatialize:module",
    ],
)

##### Documentation                                                                                                                             [ Documentation ]
