#################################################################################################################################################################
########### Import                                                                                                                                     [ Import ]
##### Internal                                                                                                                               [ Import, Internal ]
##### External                                                                                                                               [ Import, External ]

##### Visibility                                                                                                                                       [ Module ]
package(default_visibility = [
    "//system/generation:__pkg__",
    "//system/generation:__subpackages__",
    "//test/system/generation:__pkg__",
    "//test/system/generation:__subpackages__",
])

##### Module                                                                                                                                           [ Module ]

##### Documentation                                                                                                                                 [ Documentation ]
