#################################################################################################################################################################
########### Import                                                                                                                                     [ Import ]
##### Internal                                                                                                                               [ Import, Internal ]
##### External                                                                                                                               [ Import, External ]
load("@rules_rust//rust:defs.bzl", "rust_library")

##### Visibility                                                                                                                                       [ Module ]
package(default_visibility = [
    "//component:__pkg__",
    "//system/generation:__pkg__",
    "//system/generation:__subpackages__",
    "//test/system/generation:__pkg__",
    "//test/system/generation:__subpackages__",
])

##### Module                                                                                                                                           [ Module ]
rust_library(
    name = "module",
    srcs = ["generation.rs"],
    crate_name = "generation",
    deps = [
        "//component/generation/rust:module",
    ],
)

##### Documentation                                                                                                                                 [ Documentation ]
