#################################################################################################################################################################
########### Import                                                                                                                                     [ Import ]
##### Internal                                                                                                                               [ Import, Internal ]
##### External                                                                                                                               [ Import, External ]
load("@rules_rust//rust:defs.bzl", "rust_library")

##### Visibility                                                                                                                                       [ Module ]
package(default_visibility = [
    "//component:__pkg__",
    "//system/generation:__pkg__",
    "//system/generation:__subpackages__",
    "//test/system/generation:__pkg__",
    "//test/system/generation:__subpackages__",
])

##### Module                                                                                                                                           [ Module ]
rust_library(
    name = "rust",
    srcs = ["rust.rs"],
    visibility = [
        "//component:__pkg__",
        "//component/generation:__pkg__",
        "//system/generation:__subpackages__",
        "//test/system/generation:__pkg__",
        "//test/system/generation:__subpackages__",
    ],
    deps = [
        "//component/generation/rust:error",
        "//component/generation/rust:schema",
        "//component/generation/rust:types",
    ],
)

##### Documentation                                                                                                                                 [ Documentation ]
