#################################################################################################################################################################
########### Import                                                                                                                                     [ Import ]
##### Internal                                                                                                                               [ Import, Internal ]
##### External                                                                                                                               [ Import, External ]
load("@rules_rust//rust:defs.bzl", "rust_library")

##### Visibility                                                                                                                                       [ Module ]
package(default_visibility = [
    "//test:__pkg__",
    "//test:__subpackages__",
    "//visibility:public",
])

##### Module                                                                                                                                           [ Module ]
rust_library(
    name = "regression",
    srcs = ["regression.rs"],
    deps = [
        "@crates//:nalgebra",
        "@crates//:serde",
    ],
)

##### Documentation                                                                                                                             [ Documentation ]
